# python-project-83

./: .env-example  .gitignore  Makefile  README.md  database.sql  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI_tests.yml
page_analyzer/: __init__.py  actions.py  app.py  db_actions.py  db_manager.py  normalizer.py  parcer.py  parser.py  url_checker.py  validator.py
page_analyzer/templates/: 404.html  base_template.html  home_page.html  index.html  url_page.html  urls_page.html
tests/: test_app.py
