[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Daniil Balabanow <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
