[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page Analyzer is a page that analyses specified pages for SEO suitability."
authors = ["Daniil Balabanow <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]
repository = "https://github.com/spacewalrus73/python-project-83"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education"
]


[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
pytest = "^7.4.0"
flake8 = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
